Fix nav toggle off screen on tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,7 +235,7 @@ ul {
 }
 
 .nav-links {
-    margin-left: 60px;
+    padding-left: 60px;
 }
 
 .nav-icons {
